<resources>
    <string name="app_name">Lavandery</string>
    <string name="login_description">Entre na sua conta e agende a limpeza das suas roupas</string>
    <string name="email_label">Email</string>
    <string name="password_label">Senha</string>
    <string name="enter_btn_label">Entrar</string>
    <string name="alternative_login_label">- Ou entre com -</string>
    <string name="lavandery">lavandery</string>
    <string name="google_text">Google</string>
    <string name="not_have_account_text">Não tem uma conta?</string>
    <string name="sign_up_link">Cadastre-se</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_description">Crie uma conta, encontre alguém para lavar suas roupas e aproveite melhor o seu tempo.</string>
    <string name="name_label">Nome</string>
    <string name="surname_label">Sobrenome</string>
    <string name="telephone_input_text">Telefone</string>
    <string name="create_account_label">Criar conta</string>
    <string name="sign_in_label">Faça login</string>
    <string name="already_have_an_account">Já tem uma conta?</string>
    <string name="hello_user_label">Olá,</string>
    <string name="mock_user_name_in_settings_screen">Gustavo</string>
    <string name="services_preferences_label">Preferências de serviço</string>
    <string name="set_up_account_title">Configure sua conta</string>
    <string name="open_account_setting_label">editar</string>
    <string name="save_button_label">Salvar</string>
    <string name="cell_phone_label">Celular</string>
    <string name="continue_label">Continuar</string>
    <string name="street_label">Rua</string>
    <string name="street_number_label">Número</string>
    <string name="cep_label">CEP</string>
    <string name="complement_label">Complemento</string>
    <string name="order_details_label">Detalhes do pedido</string>
    <string name="label_sign_out_app">Sair do app</string>
    <string name="total_label">Total</string>
    <string name="address_label">Endereço</string>

    <string-array name="status">
        <item>Agendado</item>
        <item>Lavando</item>
        <item>Transportando</item>
        <item>Entregue</item>
    </string-array>
</resources>