<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="32dp"
    android:background="@color/new_white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:text="@string/lavandery"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/main_blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="@color/gray_text"
        android:text="@string/login_description"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/main_blue"
        app:hintTextColor="@color/main_blue">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/main_blue"
        app:hintTextColor="@color/main_blue">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_label"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/enter_login_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_btn_label"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:text="@string/alternative_login_label"
        android:textSize="16sp"
        android:textColor="@color/gray_text"/>

    <Button
        android:id="@+id/btn_sign_in_with_google"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/google_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:icon="@drawable/icon_google"
        app:iconSize="32dp"
        style="?attr/materialButtonOutlinedStyle"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/text_not_have_acount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_have_account_text"
                android:textSize="16sp"
                android:textColor="@color/gray_text"
                />
            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/sign_up_link"
                android:textColor="@color/main_blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>