<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="32dp"
    android:background="@color/white"
    tools:context=".AddressRegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:text="@string/lavandery"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/main_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Estamos quase lá!"
        android:textSize="16sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textColor="@color/gray_text"
        android:text="Adicione suas informações de endereço para que possa usar o serviço da lavandery."/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/main_blue"
        app:hintTextColor="@color/main_blue">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_registration_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_label"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:boxStrokeColor="@color/main_blue"
            app:hintTextColor="@color/main_blue">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_registration_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_number_label"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="16dp"
            app:boxStrokeColor="@color/main_blue"
            app:hintTextColor="@color/main_blue">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_registration_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep_label"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/main_blue"
        app:hintTextColor="@color/main_blue">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_registration_complement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/complement_label"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_address"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/save_button_label"
        android:textAllCaps="true"/>

</LinearLayout>